--- a/charts/kube-prometheus-stack/charts/crds/crds/crd-prometheusagents.yaml
+++ b/charts/kube-prometheus-stack/charts/crds/crds/crd-prometheusagents.yaml
@@ -7141,6 +7141,10 @@ spec:
                         type: string
                     type: object
                 type: object
+              serviceName:
+                description: |-
+                  serviceName is optional: name of the service used by the underlying StatefulSet(s) as the governing service.
+                type: string
               serviceAccountName:
                 description: |-
                   ServiceAccountName is the name of the ServiceAccount to use to run the
