--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -641,6 +641,7 @@ alertmanager:
   ## Configuration for Alertmanager service
   ##
   service:
+    enabled: true
     annotations: {}
     labels: {}
     clusterIP: ""
@@ -822,6 +823,9 @@ alertmanager:
     ## Metadata Labels and Annotations gets propagated to the Alertmanager pods.
     ##
     podMetadata: {}
+
+    ##
+    serviceName:
 
     ## Image of Alertmanager
     ##
@@ -1259,10 +1263,12 @@ grafana:
       httpMethod: POST
 
       ## Create datasource for each Pod of Prometheus StatefulSet;
-      ## this uses headless service `prometheus-operated` which is
-      ## created by Prometheus Operator
+      ## this uses by default the headless service `prometheus-operated` which is
+      ## created by Prometheus Operator. In case you deployed your own Service for your 
+      ## Prometheus instance, you can specifiy it with the field `prometheusServiceName`
       ## ref: https://github.com/prometheus-operator/prometheus-operator/blob/0fee93e12dc7c2ea1218f19ae25ec6b893460590/pkg/prometheus/statefulset.go#L255-L286
       createPrometheusReplicasDatasources: false
+      prometheusServiceName: prometheus-operated
       label: grafana_datasource
       labelValue: "1"
 
@@ -3359,6 +3365,7 @@ prometheus:
   ## Configuration for Prometheus service
   ##
   service:
+    enabled: true
     annotations: {}
     labels: {}
     clusterIP: ""
@@ -3800,6 +3807,9 @@ prometheus:
     # ref: https://prometheus.io/docs/prometheus/latest/disabled_features/
     enableFeatures: []
     # - exemplar-storage
+
+    ##
+    serviceName:
 
     ## Image of Prometheus.
     ##
@@ -4748,6 +4758,7 @@ thanosRuler:
   ## Configuration for ThanosRuler service
   ##
   service:
+    enabled: true
     annotations: {}
     labels: {}
     clusterIP: ""
@@ -4866,6 +4877,9 @@ thanosRuler:
     ## Metadata Labels and Annotations gets propagated to the ThanosRuler pods.
     ##
     podMetadata: {}
+
+    ## 
+    serviceName:
 
     ## Image of ThanosRuler
     ##
