feat(prometheus-rabbitmq-exporter): support deployment annotations
Signed-off-by: Arthur Le Roux <aleroux@wiremind.io>

--- a/charts/prometheus-rabbitmq-exporter/templates/deployment.yaml
+++ b/charts/prometheus-rabbitmq-exporter/templates/deployment.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "prometheus-rabbitmq-exporter.fullname" . }}
+  annotations:
+  {{- with .Values.additionalAnnotations }}
+    {{- toYaml .| nindent 4 }}
+  {{- end }}
   labels:
     app: {{ template "prometheus-rabbitmq-exporter.name" . }}
     chart: {{ template "prometheus-rabbitmq-exporter.chart" . }}
