--- a/charts/prometheus-rabbitmq-exporter/values.yaml
+++ b/charts/prometheus-rabbitmq-exporter/values.yaml
@@ -63,6 +63,7 @@ rabbitmq:
 ## Additional labels to set in the Deployment object. Together with standard labels from
 ## the chart
 additionalLabels: {}
+additionalAnnotations: {}
 
 podLabels: {}
 
