--- a/charts/prometheus-rabbitmq-exporter/templates/secret.yaml
+++ b/charts/prometheus-rabbitmq-exporter/templates/secret.yaml
@@ -3,13 +3,17 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "prometheus-rabbitmq-exporter.fullname" . }}
+  annotations:
+  {{- with .Values.additionalAnnotations }}
+    {{- toYaml .| nindent 4 }}
+  {{- end }}
   labels:
     app: {{ template "prometheus-rabbitmq-exporter.name" . }}
     chart: {{ template "prometheus-rabbitmq-exporter.chart" . }}
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   {{- if .Values.additionalLabels }}
-{{ toYaml .Values.additionalLabels | indent 4 }}
+    {{- toYaml .Values.additionalLabels | nindent 4 }}
   {{- end }}
 type: Opaque
 data:
