[prometheus-rabbitmq-exporter] support deployment annotations (#5331)
* feat(prometheus-rabbitmq-exporter): support deployment annotations

Signed-off-by: Arthur Le Roux <aleroux@wiremind.io>

* Update README.md

Signed-off-by: André Bauer <monotek@users.noreply.github.com>

* chore: add annotations on secret

Also lint secret labels

Signed-off-by: Arthur Le Roux <aleroux@wiremind.io>

* Update charts/prometheus-rabbitmq-exporter/values.yaml

Signed-off-by: André Bauer <monotek@users.noreply.github.com>

---------

Signed-off-by: Arthur Le Roux <aleroux@wiremind.io>
Signed-off-by: André Bauer <monotek@users.noreply.github.com>
Co-authored-by: André Bauer <monotek@users.noreply.github.com>

--- a/charts/prometheus-rabbitmq-exporter/values.yaml
+++ b/charts/prometheus-rabbitmq-exporter/values.yaml
@@ -62,6 +62,7 @@ rabbitmq:
 
 ## Additional labels to set in the Deployment object. Together with standard labels from
 ## the chart
+additionalAnnotations: {}
 additionalLabels: {}
 
 podLabels: {}
