--- a/charts/prometheus-rabbitmq-exporter/templates/configmap.yaml
+++ b/charts/prometheus-rabbitmq-exporter/templates/configmap.yaml
@@ -8,7 +8,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
   {{- with .Values.additionalLabels }}
-    {{- toYaml . | indent 4 }}
+    {{- toYaml . | nindent 4 }}
   {{- end }}
 data:
     RABBIT_URL: {{ .Values.rabbitmq.url | quote }}
