add security context support for Configmap-reload container at snmp-exporter daemonset and deployment
Signed-off-by: Danilo Moreira <danilomcloud@outlook.com>

--- a/charts/prometheus-snmp-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-snmp-exporter/templates/daemonset.yaml
@@ -99,6 +99,10 @@ spec:
             - mountPath: /etc/config
               name: config
               readOnly: true
+{{- if .Values.configmapReload.containerSecurityContext }}
+          securityContext:
+{{ toYaml .Values.configmapReload.containerSecurityContext | indent 12 }}
+        {{- end }}
       {{- end }}
       {{- if .Values.imagePullSecrets }}
       imagePullSecrets:
