--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -160,6 +160,12 @@ configmapReload:
   ##
   resources: {}
 
+  ## configmap-reload container security context
+  containerSecurityContext: {}
+    # runAsNonRoot: true
+    # runAsUser: 1000
+    # readOnlyRootFilesystem: true
+
 # Enable this if you're using https://github.com/prometheus-operator/prometheus-operator
 # A service monitor will be created per each item in serviceMonitor.params[]
 serviceMonitor:
