--- a/charts/prometheus-snmp-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-snmp-exporter/templates/servicemonitor.yaml
@@ -36,7 +36,7 @@ spec:
         action: replace
         {{- range $targetLabel, $replacement := .additionalMetricsRelabels | default $.Values.serviceMonitor.additionalMetricsRelabels }}
       - targetLabel: {{ $targetLabel }}
-        replacement: {{ $replacement }}
+        replacement: {{ $replacement | quote }}
         action: replace
         {{- end }}
       {{- if (or .additionalMetricsRelabelConfigs $.Values.serviceMonitor.additionalMetricsRelabelConfigs) }}
