[prometheus-cloudwatch-exporter] Add PodDisruptionBudget
Signed-off-by: Jeong Donghee <donghee950403@gmail.com>

--- a/charts/prometheus-cloudwatch-exporter/values.yaml
+++ b/charts/prometheus-cloudwatch-exporter/values.yaml
@@ -243,3 +243,12 @@ containerSecurityContext: {}
 # ref: https://kubernetes.io/docs/concepts/configuration/pod-priority-preemption/
 # priorityClassName: system-cluster-critical
 priorityClassName: ""
+
+
+# Specifying a Disruption Budget for prometheus-cloudwatch-exporter
+# ref: https://kubernetes.io/docs/tasks/run-application/configure-pdb/
+podDisruptionBudget:
+  enabled: false
+  maxUnavailable: 1
+  # minAvailable: 2
+
