--- a/charts/prometheus-adapter/templates/certmanager.yaml
+++ b/charts/prometheus-adapter/templates/certmanager.yaml
@@ -31,6 +31,9 @@ metadata:
 spec:
   secretName: {{ template "k8s-prometheus-adapter.fullname" . }}-root-cert
   duration: {{ .Values.certManager.caCertDuration }}
+  {{- with .Values.certManager.caCertRevisionHistoryLimit }}
+  revisionHistoryLimit: {{ . }}
+  {{- end }}
   issuerRef:
     name: {{ template "k8s-prometheus-adapter.fullname" . }}-self-signed-issuer
   commonName: "ca.webhook.prometheus-adapter"
@@ -67,6 +70,9 @@ metadata:
 spec:
   secretName: {{ template "k8s-prometheus-adapter.fullname" . }}
   duration: {{ .Values.certManager.certDuration }}
+  {{- with .Values.certManager.certRevisionHistoryLimit }}
+  revisionHistoryLimit: {{ . }}
+  {{- end }}
   issuerRef:
     name: {{ template "k8s-prometheus-adapter.fullname" . }}-root-issuer
   dnsNames:
