--- a/charts/prometheus-adapter/values.yaml
+++ b/charts/prometheus-adapter/values.yaml
@@ -290,3 +290,8 @@ certManager:
   enabled: false
   caCertDuration: 43800h0m0s
   certDuration: 8760h0m0s
+  # -- Set the revisionHistoryLimit on the Certificates. See
+  # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
+  # Defaults to nil.
+  caCertRevisionHistoryLimit: ""
+  certRevisionHistoryLimit: ""
