[prometheus-smartctl-exporter] Remove unresponsive maintainer
Remove unresponsive maintainer @kfox1111

Closes: https://github.com/prometheus-community/helm-charts/issues/5150

Signed-off-by: SuperQ <superq@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -44,7 +44,7 @@
 /charts/prometheus-pushgateway/ @cstaud @gianrubio @zeritti
 /charts/prometheus-rabbitmq-exporter/ @desaintmartin @iamabhishek-dubey @juanchimienti @monotek
 /charts/prometheus-redis-exporter/ @acondrat @zanhsieh
-/charts/prometheus-smartctl-exporter/ @kfox1111 @zeritti
+/charts/prometheus-smartctl-exporter/ @zeritti
 /charts/prometheus-snmp-exporter/ @walker-tom @xiu
 /charts/prometheus-sql-exporter/ @wilfriedroset
 /charts/prometheus-stackdriver-exporter/ @apenney @rpahli
