[prometheus-yet-another-cloudwatch-exporter] Add labels to deployment
Signed-off-by: Jozef Volak <jozefvolak@gmail.com>
Signed-off-by: Jozef Volak <jozef.volak@ataccama.com>

--- a/charts/prometheus-yet-another-cloudwatch-exporter/templates/deployment.yaml
+++ b/charts/prometheus-yet-another-cloudwatch-exporter/templates/deployment.yaml
@@ -5,6 +5,9 @@ metadata:
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "yet-another-cloudwatch-exporter.labels" . | nindent 4 }}
+    {{- with .Values.deployment.labels }}
+    {{- toYaml . | nindent 4 }}
+    {{- end }}
   {{- with .Values.podAnnotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
