[prometheus-postgres-exporter] Allow namespace override
Signed-off-by: Jonas Schulz <jonas.schulz@b1-systems.de>

--- a/charts/prometheus-postgres-exporter/templates/deployment.yaml
+++ b/charts/prometheus-postgres-exporter/templates/deployment.yaml
@@ -5,6 +5,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ template "prometheus-postgres-exporter.fullname" . }}
+  namespace: {{ include "prometheus-postgres-exporter.namespace" . }}
   labels:
     {{- include "prometheus-postgres-exporter.labels" . | nindent 4 }}
     {{- with .Values.deployment.labels }}
