--- a/charts/prometheus-postgres-exporter/templates/pdb.yaml
+++ b/charts/prometheus-postgres-exporter/templates/pdb.yaml
@@ -3,6 +3,7 @@ apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "prometheus-postgres-exporter.fullname" . }}
+  namespace: {{ include "prometheus-postgres-exporter.namespace" . }}
   labels:
     {{- include "prometheus-postgres-exporter.labels" . | nindent 4 }}
 spec:
