--- a/charts/prometheus-postgres-exporter/templates/serviceaccount.yaml
+++ b/charts/prometheus-postgres-exporter/templates/serviceaccount.yaml
@@ -4,6 +4,7 @@ kind: ServiceAccount
 automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
 metadata:
   name: {{ template "prometheus-postgres-exporter.serviceAccountName" . }}
+  namespace: {{ include "prometheus-postgres-exporter.namespace" . }}
   labels:
     {{- include "prometheus-postgres-exporter.labels" . | nindent 4 }}
   {{- if .Values.serviceAccount.annotations }}
