--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -110,6 +110,9 @@ serviceAccount:
   # Add annotations to the ServiceAccount, useful for EKS IAM Roles for Service Accounts or Google Workload Identity.
   annotations: {}
 
+# Force namespace of namespaced resources
+namespaceOverride: ""
+
 # Add a default ingress to allow namespace access to service.targetPort
 # Helpful if other NetworkPolicies are configured in the namespace
 networkPolicy:
