--- a/charts/prometheus-postgres-exporter/templates/prometheusrule.yaml
+++ b/charts/prometheus-postgres-exporter/templates/prometheusrule.yaml
@@ -3,9 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: PrometheusRule
 metadata:
   name: {{ template "prometheus-postgres-exporter.fullname" . }}
-{{- with .Values.prometheusRule.namespace }}
-  namespace: {{ . }}
-{{- end }}
+  namespace: {{ .Values.prometheusRule.namespace | default (include "prometheus-postgres-exporter.namespace" .)  }}
   labels:
     {{- include "prometheus-postgres-exporter.labels" . | nindent 4 }}
 {{- with .Values.prometheusRule.additionalLabels }}
