--- a/charts/prometheus-postgres-exporter/templates/secrets.yaml
+++ b/charts/prometheus-postgres-exporter/templates/secrets.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "prometheus-postgres-exporter.fullname" . }}
+  namespace: {{ include "prometheus-postgres-exporter.namespace" . }}
   labels:
     {{- include "prometheus-postgres-exporter.labels" . | nindent 4 }}
 type: Opaque
