--- a/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
@@ -8,9 +8,7 @@ metadata:
 {{ toYaml .Values.serviceMonitor.labels | indent 4}}
 {{- end }}
   name: {{ template "prometheus-postgres-exporter.fullname" . }}
-{{- if .Values.serviceMonitor.namespace }}
-  namespace: {{ .Values.serviceMonitor.namespace }}
-{{- end }}
+  namespace: {{ .Values.serviceMonitor.namespace | default (include "prometheus-postgres-exporter.namespace" .)  }}
 spec:
 {{- if .Values.serviceMonitor.multipleTarget.enabled }}
   endpoints:
