--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -397,6 +397,10 @@ collectors:
   - storageclasses
   - validatingwebhookconfigurations
   - volumeattachments
+  # - ingressclasses
+  # - clusterrolebindings
+  # - clusterroles
+  # - roles
 
 # Enabling kubeconfig will pass the --kubeconfig argument to the container
 kubeconfig:
