--- a/charts/prometheus-opencost-exporter/Chart.yaml
+++ b/charts/prometheus-opencost-exporter/Chart.yaml
@@ -1,5 +1,6 @@
 appVersion: 1.108.0
-version: 0.1.1
+version: 0.1.2
+deprecated: true
 description: Prometheus OpenCost Exporter
 home: https://github.com/opencost/opencost
 name: prometheus-opencost-exporter
