--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2893,7 +2893,7 @@ prometheusOperator:
         # -- Set the revisionHistoryLimit on the Certificate. See
         # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
         # Defaults to nil.
-        revisionHistoryLimit: ""
+        revisionHistoryLimit: 
       admissionCert:
         duration: ""  # default to be 1y
         # -- Set the revisionHistoryLimit on the Certificate. See
