--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2899,7 +2899,7 @@ prometheusOperator:
         # -- Set the revisionHistoryLimit on the Certificate. See
         # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
         # Defaults to nil.
-        revisionHistoryLimit: ""
+        revisionHistoryLimit:
       # issuerRef:
       #   name: "issuer"
       #   kind: "ClusterIssuer"
