--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -113,14 +113,14 @@ certManager:
     # -- Set the revisionHistoryLimit on the Certificate. See
     # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
     # Defaults to nil.
-    # revisionHistoryLimit: ""
+    # revisionHistoryLimit:
   ## webhookCert allows setting webhook certificate's lifetime, defaults to 1y
   webhookCert: {}
     # duration: "8760h0m0s"
     # -- Set the revisionHistoryLimit on the Certificate. See
     # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
     # Defaults to nil.
-    # revisionHistoryLimit: ""
+    # revisionHistoryLimit:
 
 ## caBundle allows inserting a CA bundle in webhook configurations
 ## (PEM format, base64-encoded) if that CA is unknown at the API server.
