[prometheus-operator-admission-webhook] feat(chart): add support for revisionHistoryLimit on the cert (#5394)
* feat(chart): add support for revisionHistoryLimit on the cert

Signed-off-by: Aran Shavit <Aranshavit@gmail.com>

* Update charts/prometheus-operator-admission-webhook/Chart.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Aran Shavit <Aranshavit@gmail.com>

* remove string default value to @zeritti request

Signed-off-by: Aran Shavit <Aranshavit@gmail.com>

---------

Signed-off-by: Aran Shavit <Aranshavit@gmail.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-operator-admission-webhook/values.yaml
+++ b/charts/prometheus-operator-admission-webhook/values.yaml
@@ -110,9 +110,17 @@ certManager:
   ## rootCert allows setting certificate's lifetime when creating an issuer, defaults to 5y
   rootCert: {}
     # duration: "43800h0m0s"
+    # -- Set the revisionHistoryLimit on the Certificate. See
+    # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
+    # Defaults to nil.
+    # revisionHistoryLimit:
   ## webhookCert allows setting webhook certificate's lifetime, defaults to 1y
   webhookCert: {}
     # duration: "8760h0m0s"
+    # -- Set the revisionHistoryLimit on the Certificate. See
+    # https://cert-manager.io/docs/reference/api-docs/#cert-manager.io/v1.CertificateSpec
+    # Defaults to nil.
+    # revisionHistoryLimit:
 
 ## caBundle allows inserting a CA bundle in webhook configurations
 ## (PEM format, base64-encoded) if that CA is unknown at the API server.
