--- a/charts/prometheus-pushgateway/Chart.yaml
+++ b/charts/prometheus-pushgateway/Chart.yaml
@@ -1,5 +1,6 @@
 apiVersion: v2
-appVersion: "v1.11.0"
+# renovate: github-releases=prometheus/pushgateway
+appVersion: v1.11.1
 description: A Helm chart for prometheus pushgateway
 name: prometheus-pushgateway
 version: 3.1.0
