--- a/charts/alertmanager-snmp-notifier/Chart.yaml
+++ b/charts/alertmanager-snmp-notifier/Chart.yaml
@@ -5,7 +5,8 @@ home: https://github.com/maxwo/snmp_notifier
 sources:
   - https://github.com/maxwo/snmp_notifier
 type: application
-version: 0.4.0
+version: 0.4.1
+# renovate: github-releases=maxwo/snmp_notifier
 appVersion: v1.6.0
 keywords:
   - monitoring
