--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -346,6 +346,17 @@ configmapReload:
   extraEnv: []
     # - name: FOO
     #   value: BAR
+  
+  # -- Add extra specs dynamically to this chart
+  extraObjects: []
+    # - |
+    #   apiVersion: v1
+    #   kind: ConfigMap
+    #   metadata:
+    #     name: my-config
+    #     namespace: default
+    #   data:
+    #     key: value
 
   securityContext: {}
     # capabilities:
