--- a/charts/prometheus-redis-exporter/Chart.yaml
+++ b/charts/prometheus-redis-exporter/Chart.yaml
@@ -1,8 +1,9 @@
 apiVersion: v2
+# renovate: github=oliver006/redis_exporter
 appVersion: v1.69.0
 description: Prometheus exporter for Redis metrics
 name: prometheus-redis-exporter
-version: 6.10.2
+version: 6.10.3
 home: https://github.com/oliver006/redis_exporter
 sources:
   - https://github.com/oliver006/redis_exporter
