--- a/charts/prometheus-memcached-exporter/Chart.yaml
+++ b/charts/prometheus-memcached-exporter/Chart.yaml
@@ -2,7 +2,8 @@ apiVersion: v2
 name: prometheus-memcached-exporter
 description: Prometheus exporter for Memcached metrics
 type: application
-version: 0.4.0
+version: 0.4.1
+# renovate: github=prometheus/memcached_exporter
 appVersion: "v0.15.0"
 home: https://github.com/prometheus/memcached_exporter
 sources:
