--- a/charts/prometheus-fastly-exporter/Chart.yaml
+++ b/charts/prometheus-fastly-exporter/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v2
+# renovate: github=fastly/fastly-exporter
 appVersion: "v9.1.1"
 description: A Helm chart for the Prometheus Fastly Exporter
 name: prometheus-fastly-exporter
