Comment out invalid code that breaks deployment
Signed-off-by: lisenet <tomas@lisenet.com>

--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -334,12 +334,12 @@ configmapReload:
   ##
   resources: {}
 
-  livenessProbe: {}
+  #livenessProbe: {}
     # httpGet:
     #   path: /healthz
     #   port: 8080
     #   scheme: HTTP
-  readinessProbe: {}
+  #readinessProbe: {}
     # httpGet:
     #   path: /healthz
     #   port: 8080
