--- a/charts/prometheus-blackbox-exporter/templates/networkpolicy.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/networkpolicy.yaml
@@ -15,7 +15,7 @@ spec:
   - from:
     - namespaceSelector:
         matchLabels:
-          name: monitoring
+          name: {{ default "monitoring" .Values.networkPolicy.monitoringNamespaceName }}
     ports:
     - port: {{ .Values.service.port }}
       protocol: TCP
