--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -380,9 +380,11 @@ networkPolicy:
   # Enable network policy and allow access from anywhere
   enabled: false
   # Limit access only from monitoring namespace
-  # Before setting this value to true, you must add the name=monitoring label to the monitoring namespace
+  # Before setting this value to true, you must add the name=monitoring label to the monitoring namespace.  Name can be rewritten by monitoringNamespaceName
   # Network Policy uses label filtering
   allowMonitoringNamespace: false
+  # Rewrite monitoring namespace in network policy (default value monitoring)
+  monitoringNamespaceName: ""
 
 ## dnsPolicy and dnsConfig for Deployments and Daemonsets if you want non-default settings.
 ## These will be passed directly to the PodSpec of same.
