--- a/renovate.json
+++ b/renovate.json
@@ -9,7 +9,6 @@
   ],
   "suppressNotifications": ["prEditedNotification"],
   "dependencyDashboardApproval": false,
-  "bumpVersion": "patch",
   "customManagers": [
     {
       "customType": "regex",
@@ -81,7 +80,23 @@
       },
       "matchPackageNames": [
         "*"
+      ],
+      "bumpVersions": [
+        {
+          "name": "Updating Chart version",
+          "filePatterns": ["{{packageFileDir}}/Chart.{yaml,yml}"],
+          "matchStrings": ["(?:^|\\n)version:\\s\"?(?<version>\\d+\\.\\d+\\.\\d+)\"?(?:$|\\n)"],
+          "bumpType": "{{#if isPatch}}patch{{else}}minor{{/if}}"
+        }
       ]
+    },
+    {
+      "enabled": true,
+      "matchFileNames": [
+        "charts/prometheus-operator-crds/**"
+      ],
+      "automerge": true,
+      "platformAutomerge": true
     }
   ]
 }
