--- a/charts/prometheus-fastly-exporter/Chart.yaml
+++ b/charts/prometheus-fastly-exporter/Chart.yaml
@@ -1,8 +1,9 @@
 apiVersion: v2
+# renovate: github=fastly/fastly-exporter
 appVersion: "v9.1.1"
 description: A Helm chart for the Prometheus Fastly Exporter
 name: prometheus-fastly-exporter
-version: 0.6.0
+version: 0.6.1
 keywords:
   - metrics
   - fastly
